@@ -1,6 +1,9 @@
 package com.whales.scrap.api;
 
+import com.whales.comment.domain.CommentRepository;
 import com.whales.post.api.PostResponse;
+import com.whales.reaction.api.ReactionSummary;
+import com.whales.reaction.application.PostReactionService;
 import com.whales.scrap.application.PostScrapService;
 import com.whales.security.WhalesUserPrincipal;
 import lombok.RequiredArgsConstructor;
@@ -10,6 +13,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -17,6 +21,8 @@ import java.util.UUID;
 public class PostScrapController {
 
     private final PostScrapService postScrapService;
+    private final CommentRepository commentRepository;
+    private final PostReactionService postReactionService;
 
     @PostMapping("/{postId}/scrap")
     public ResponseEntity<Void> toggleScrap(@PathVariable UUID postId,
@@ -36,8 +42,13 @@ public class PostScrapController {
     public ResponseEntity<List<PostResponse>> getMyScraps(@AuthenticationPrincipal WhalesUserPrincipal principal) {
         List<PostResponse> myScraps = postScrapService.getMyScraps(principal.getId())
                 .stream()
-                .map(PostResponse::from)
-                .toList();
+                .map(post -> {
+                    long commentCount = commentRepository.countByPost_Id(post.getId());
+                    ReactionSummary reactions = postReactionService.getReactionSummaryWithoutUser(post.getId());
+
+                    return PostResponse.from(post, commentCount, reactions);
+                })
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(myScraps);
     }
